# alphahunt-sdk-py

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
alphahunt_sdk/: __init__.py  cli.py  constants.py  errors.py  utils.py
tests/: conftest.py  test_account.py  test_basics.py
